--- a/Forms/After_5fweb_5cfrmNewProjectDiscount.form
+++ b/Forms/After_5fweb_5cfrmNewProjectDiscount.form
@@ -58,8 +58,8 @@ Private Sub BindEvents(Byval Objectname_ As String)
 	On Event Exiting From Source Call Exiting
 End Sub
 <break/></text></item>
-<item name='$nmdpws_1_O' sign='true'>
-<rawitemdata type='14'>
+<item name='$nmdpws_1_O' sign='false'>
+<rawitemdata type='15'>
 AQAAAkxTT0IDABQIZW4AAAQAGAAHAQQAAAAIBZgCAAAAAAAASAEkAgAAAAAkAMQAGAA4AJwAAABU
 AAAAAAAAAAMAAACgAKwDAAAAANQC1AIAAAAAoACgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 AAAAAAAArAOsAwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
